--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blair Canady Lowe</title>
+    <link href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
@@ -19,7 +21,7 @@
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
       <section>
         <h2>Featured Projects</h2>
-        <p>View selected projects below. More information can be found at <a href="http://blaircanady.com">christinatruong.com</a>.</p>
+        
 
         <!-- Copy the whole <section> block to add more projects. -->
         <section>
